--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -378,6 +378,11 @@ button {
   display: flex;
   min-height: calc(100vh - 70px); // Subtract navbar height
   margin-top: 70px; // Navbar height
+  
+  @include respond-below(sm) {
+    min-height: calc(100vh - 60px); // Smaller navbar on mobile
+    margin-top: 60px;
+  }
 }
 
 .main-content {
@@ -392,6 +397,11 @@ button {
     width: 100%;
     padding: var(--space-4);
     padding-top: var(--space-6);
+  }
+  
+  @include respond-below(sm) {
+    padding: var(--space-3);
+    padding-top: var(--space-4);
   }
 }
 
